--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,13 +5,19 @@ workflows:
     environment:
       vars:
         JAVA_VERSION: 17
-      flutter: stable
+      android: latest
     scripts:
+      - name: Install Gradle
+        script: sdk install gradle 8.2
+
       - name: Setup Gradle
         script: |
-          chmod +x ./gradlew
+          chmod +x gradlew
+          ./gradlew wrapper
           ./gradlew dependencies
+
       - name: Build APK
         script: ./gradlew assembleDebug
+
     artifacts:
       - app/build/outputs/apk/debug/app-debug.apk
