--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,19 +5,15 @@ workflows:
     environment:
       vars:
         JAVA_VERSION: 17
-      android: latest
     scripts:
       - name: Install Gradle
         script: sdk install gradle 8.2
-
       - name: Setup Gradle
         script: |
           chmod +x gradlew
           ./gradlew wrapper
           ./gradlew dependencies
-
       - name: Build APK
         script: ./gradlew assembleDebug
-
     artifacts:
-      - app/build/outputs/apk/debug/app-debug.apk
+      - app/build/outputs/**/*.apk
