--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,31 +5,17 @@ workflows:
     environment:
       vars:
         JAVA_VERSION: 17
-      flutter: stable
     scripts:
       - name: Clean and Force Dependencies Download
         script: |
           rm -rf ~/.gradle/caches/
           rm -rf ~/.gradle/wrapper/
           chmod +x ./gradlew
-          ./gradlew clean
-      - name: Download Fresh Gradle Wrapper
-        script: |
-          mkdir -p ./gradle/wrapper
-          curl -o ./gradle/wrapper/gradle-wrapper.jar https://services.gradle.org/distributions/gradle-7.6-bin.zip
-          unzip -d ./gradle/wrapper ./gradle/wrapper/gradle-wrapper.jar
-          chmod +x ./gradlew
-      - name: Setup Gradle
-        script: |
           ./gradlew wrapper --gradle-version 7.6
-          chmod +x ./gradlew
+          ./gradlew clean
           ./gradlew dependencies --refresh-dependencies
       - name: Build APK
         script: |
-          ./gradlew assembleDebug --no-build-cache
+          ./gradlew assembleRelease
     artifacts:
-      - app/build/outputs/apk/debug/*.apk
-    publishing:
-      email:
-        recipients:
-          - "alessandro.cuollo01@gmail.com"
+      - app/build/outputs/apk/release/app-release.apk
