--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,7 @@ workflows:
         script: |
           echo "Cleaning old Gradle wrapper..."
           rm -f ./gradle/wrapper/gradle-wrapper.jar
-          rm -rf ~/.gradle/caches/
+          rm -rf ./gradle/caches/
           rm -rf ./app/build/
           echo "Pulizia completata."
 
@@ -38,14 +38,10 @@ workflows:
         script: |
           echo "Avvio build APK..."
           ./gradlew assembleDebug
+          ./gradlew assembleRelease
           echo "Build APK completata."
-          
-      - name: Copy APK to Artifacts Folder
-        script: |
-          echo "Copia dell'APK nella cartella di output..."
-          mkdir -p ./output
-          cp ./app/build/outputs/apk/debug/app-debug.apk ./output/
-          echo "APK copiato in ./output"
 
     artifacts:
-      - output/app-debug.apk
+      # Aggiunto sia per il debug che per il release
+      - app/build/outputs/apk/debug/app-debug.apk
+      - app/build/outputs/apk/release/app-release.apk
