--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,11 +37,12 @@ workflows:
       - name: Build APK
         script: |
           echo "Avvio build APK..."
-          ./gradlew assembleDebug
-          ./gradlew assembleRelease
+          ./gradlew clean assembleDebug assembleRelease
           echo "Build APK completata."
 
     artifacts:
-      # Aggiunto sia per il debug che per il release
-      - app/build/outputs/apk/debug/app-debug.apk
-      - app/build/outputs/apk/release/app-release.apk
+      # Inclusi tutti i possibili percorsi per sicurezza
+      - app/build/outputs/apk/debug/*.apk
+      - app/build/outputs/apk/release/*.apk
+      - app/build/outputs/apk/**/*.apk
+      - app/build/outputs/**/*.apk
