--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -46,4 +46,4 @@ workflows:
           find . -name "*.apk" || echo "No APKs found"
 
     artifacts:
-      - **/outputs/**/*.apk
+      - "**/outputs/**/*.apk"
