--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -43,11 +43,11 @@ workflows:
           ./gradlew assembleRelease
           echo "Build APK completata."
 
-      - name: Trova e Lista APKs
+      - name: Verifica File Generati
         script: |
-          echo "Cercando APKs in tutto il progetto..."
+          echo "Verifica di tutti i file APK generati..."
           find . -name "*.apk" -print
-          echo "Se APKs trovati, verranno pubblicati."
+          echo "Verifica completata."
 
       - name: Forza Pubblicazione Artifacts
         script: |
@@ -57,4 +57,6 @@ workflows:
           echo "APKs spostati in build/artifacts/"
 
     artifacts:
-      - build/artifacts/*.apk
+      - build/artifacts/**/*.apk
+      - app/build/outputs/**/*.apk
+      - **/*.apk
