--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -57,6 +57,6 @@ workflows:
           echo "APKs spostati in build/artifacts/"
 
     artifacts:
-      - build/artifacts/**/*.apk
-      - app/build/outputs/**/*.apk
-      - **/*.apk
+      - "build/artifacts/**/*.apk"
+      - "app/build/outputs/**/*.apk"
+      - "**/*.apk"
