--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,13 +11,12 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
-
+        uses: actions/checkout@v3
+        
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
 
       - name: Cache Gradle Dependencies
         uses: actions/cache@v3
@@ -28,20 +27,13 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Set Gradlew Permissions
-        run: chmod +x ./gradlew  # Aggiunge i permessi di esecuzione a gradlew
-
-      - name: Download Gradle Wrapper
-        run: |
-          mkdir -p ./gradle/wrapper
-          curl -o ./gradle/wrapper/gradle-wrapper.jar https://services.gradle.org/distributions/gradle-7.6-bin.zip
-          unzip -d ./gradle/wrapper ./gradle/wrapper/gradle-wrapper.jar
-          chmod +x ./gradlew
+        run: chmod +x ./gradlew
 
       - name: Build APK
         run: ./gradlew assembleRelease
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: app-release.apk
           path: app/build/outputs/apk/release/app-release.apk
