--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -16,25 +16,27 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
           distribution: 'temurin'
-          
+
       - name: Cache Gradle Dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.gradle/caches
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Give Gradlew Permissions
+      - name: Set Gradlew Permissions
         run: chmod +x ./gradlew
 
       - name: Build APK
         run: ./gradlew assembleRelease
 
       - name: Upload APK
-  uses: actions/upload-artifact@v4
-  with:
-    name: app-release.apk
-    path: app/build/outputs/apk/release/app-release.apk
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release.apk
+          path: app/build/outputs/apk/release/app-release.apk
