--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -29,7 +29,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle
 
-    - name: Rendi eseguibile gradlew
+    - name: Rendi Eseguibile gradlew
       run: chmod +x ./gradlew
 
     - name: Build APK
