--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up JDK 17
+    - name: Setup JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -22,15 +22,13 @@ jobs:
     - name: Cache Gradle Dependencies
       uses: actions/cache@v3
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
+        path: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle
+          ${{ runner.os }}-gradle-
 
-    - name: Rendi Eseguibile gradlew
-      run: chmod +x ./gradlew
+    - name: Concedi Permessi a Tutti gli Script Gradle
+      run: chmod +x ./gradlew ./gradle/wrapper/gradle-wrapper.jar
 
     - name: Build APK
       run: ./gradlew assembleRelease
