--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,8 @@
+# Versione Locale
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=gradle/wrapper/gradle-wrapper.jar
+
+# Versione Remota
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.6-bin.zip
