--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,40 +1,5 @@
-name: Build Android APK
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-
-    - name: Setup JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Cache Gradle Dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-
-    - name: Concedi Permessi a Tutti gli Script Gradle
-      run: chmod +x ./gradlew ./gradle/wrapper/gradle-wrapper.jar
-
-    - name: Build APK
-      run: ./gradlew assembleRelease
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release.apk
-        path: app/build/outputs/apk/release/app-release.apk
+steps:
+  - name: Checkout
+    uses: actions/checkout@v3
+  - name: Setup JDK
+    uses: actions/setup-java@v3
