--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -36,6 +36,11 @@ jobs:
 
       - name: Build APK
         run: ./gradlew assembleRelease
+     
+      - name: Verifica Output della Build
+        run: |
+          echo "Contenuto della directory di output:"
+          ls -R app/build/outputs/
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
