--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -36,7 +36,8 @@ jobs:
     - name: Verifica Output della Build
       run: |
         echo "Contenuto della directory di output:"
-        ls -R app/build/outputs/
+        find app/build -type f
+
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
