--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -10,37 +10,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Setup JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: 17
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'temurin'
 
-    - name: Cache Gradle Dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+      - name: Cache Gradle Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-    - name: Grant Execute Permission for Gradlew
-      run: chmod +x ./gradlew
+      - name: Concedi Permessi di Esecuzione
+        run: chmod +x ./gradlew
 
-    - name: Build APK
-      run: ./gradlew assembleRelease
+      - name: Pulizia Cache Gradle
+        run: ./gradlew clean
 
-    - name: Verifica Output della Build
-      run: |
-        echo "Contenuto della directory di output:"
-        find app/build -type f
+      - name: Verifica Dipendenze
+        run: ./gradlew dependencies
 
+      - name: Verifica Build Gradle
+        run: |
+          echo "Avvio build dettagliata di Gradle..."
+          ./gradlew assembleRelease --info --stacktrace
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release.apk
-        path: app/build/outputs/apk/release/app-release.apk
+      - name: Verifica Output della Build
+        run: |
+          echo "Contenuto della directory di output:"
+          find app/build -type f
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release.apk
+          path: app/build/outputs/apk/release/app-release.apk
