--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -4,27 +4,21 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'temurin'
 
-      # Cache Gradle Dependencies
       - name: Cache Gradle Dependencies
         uses: actions/cache@v3
         with:
@@ -33,21 +27,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Grant Execute Permission for Gradlew
       - name: Grant Execute Permission for Gradlew
         run: chmod +x ./gradlew
 
-      # Build APK
       - name: Build APK
         run: ./gradlew assembleRelease
 
-      # Verifica Output della Build
       - name: Verifica Output della Build
         run: |
           echo "Contenuto della directory di output:"
-          find . -type f
+          find app/build/outputs/ -type f
 
-      # Upload APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
