--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -45,3 +45,4 @@ jobs:
         with:
           name: app-release.apk
           path: app/build/outputs/apk/release/app-release.apk
+# Forzo l'aggiornamento
