--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -31,9 +31,15 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleRelease --stacktrace --info
 
       - name: Verifica Output della Build
         run: |
           echo "Contenuto della directory di output:"
           find . -type f
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release.apk
+          path: app/build/outputs/apk/release/app-release.apk
