--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -4,43 +4,40 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
           distribution: 'temurin'
 
-      - name: Cache Gradle Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Grant Execute Permission for Gradlew
-        run: chmod +x ./gradlew
-
-      - name: Verifica Task di Gradle Disponibili
-        run: ./gradlew tasks --all
-
-
-      - name: Build APK
-        run: ./gradlew assembleRelease
-
-      - name: Verifica Output della Build
+      - name: Clean and Download Gradle Wrapper
         run: |
-          echo "Contenuto della directory di output:"
+          rm -f ./gradle/wrapper/gradle-wrapper.jar
+          ./gradlew wrapper --gradle-version 8.1.1
+          chmod +x ./gradlew
+          chmod +x ./gradle/wrapper/gradle-wrapper.jar
+
+      - name: Build Release APK
+        run: |
+          ./gradlew assembleRelease
+
+      - name: Verifica Output APK
+        run: |
+          echo "Verifica del contenuto della directory di output:"
           find . -type f
+          ls -R app/build/outputs/
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
