--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 plugins {
     id 'com.android.application' version '8.0.2'
-    id 'org.jetbrains.kotlin.android' version "$kotlinVersion"
+    id 'org.jetbrains.kotlin.android' version '1.9.0'
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
