--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,3 +33,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+// Risoluzione dei conflitti di versione di Kotlin
+configurations.all {
+    resolutionStrategy {
+        force "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
+        force "org.jetbrains.kotlin:kotlin-reflect:1.9.0"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.0"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0"
+    }
+}
