--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-# Impostazione della versione di Kotlin per evitare conflitti
+# Imposta la versione di Kotlin per evitare conflitti
 kotlinVersion=1.9.0
 
 # Configurazione della memoria per Gradle (puoi aumentare se necessario)
